[gd_scene load_steps=2 format=3 uid="uid://be1sw78cnhfjp"]

[ext_resource type="Script" path="res://scenes/interface/MainMenu/MainMenu.gd" id="2_g1n1f"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="MainMenu" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)
script = ExtResource("2_g1n1f")

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MainMenu/CenterContainer"]
custom_minimum_size = Vector2(160, 90)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MainMenuLabel" type="Label" parent="MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fox in a Firestorm"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TestLevelButton" type="Button" parent="MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Test Level"

[node name="QuitButton" type="Button" parent="MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Quit"
